# routes/api.php
@@ -18,11 +18,16 @@ use Illuminate\Support\Facades\Validator;
 | be assigned to the "api" middleware group. Make something great!
 |
 */
-Route::post('/tokens/create', [TokenController::class, 'createToken']);
+Route::post('/auth/token', [TokenController::class, 'createToken']);
 
 Route::middleware('auth:sanctum')->get('/films/store', [MoviesController::class, 'store']);
 Route::middleware('auth:sanctum')->get('/films/list', [MoviesController::class, 'index']);
 Route::middleware('auth:sanctum')->get('/films/list/{id}', [MoviesController::class, 'show']);
 Route::middleware('auth:sanctum')->post('/films/modify/{id}', [MoviesController::class, 'update']);
 Route::middleware('auth:sanctum')->get('/films/delete/{id}', [MoviesController::class, 'destroy']);
-
+Route::get( '/some_url', function () {
+    return response()->json([
+        'message' => 'unauthenticated',
+    ]);
+}
+)->name('login');
